--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  pokeapi: 1.0.3
+  pokeapi:
+    git: https://github.com/chocoelho/pokedart.git
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
